--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -1,6 +1,8 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+  <p id="notice"><%= notice %></p>
+<% end %>
 
-<h2 class=:todo_list_title><%= @todo_list.title %></h2>
+<h2 class=:todo_list_title style="margin-left: 3px;"><%= @todo_list.title %></h2>
 <p class="todo_list_sub_title"> <%= @todo_list.description %></p>
 
 <div id="todo_items_wrapper">
